--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                 <p class="text-center">인공지능이 당신의 사진을 분석중입니다.</p>
             </div>
             <p class="result-message"></p>
-            <div id="label-container" class="d-flex flex-column justify-content-around"></div>
+            <div id="label-container" class="d-flex flex-column justify-content-around text-center"></div>
 
             <div class="pt-3 image-title-wrap">
                 <button type="button p-2" class="try-again-btn" onclick="gaReload1();" data-toggle="modal"
                     data-target="#adModal">
-                    <span class="try-again-text">다른 사진으로 재시도</span>
+                    <span class="try-again-text">다른 사진 가져오기</span>
                 </button>
             </div>
         </div>
@@ -140,48 +140,90 @@
             let face_image = document.getElementById("face-image");
             const prediction = await model.predict(face_image, false);
             prediction.sort((a, b) => parseFloat(b.probability) - parseFloat(a.probability));
-            let resultMessege;
+            let resultTitle;
             switch (prediction[0].className) {
                 case "피오나공주":
-                    resultMessege = "피오나"
+
+                    resultTitle = '당신은 공주 "피오나" 군요!'
                     break;
                 case "백설공주":
-                    resultMessege = "백설공주"
+                    resultTitle = '당신은 "백설공주" 군요!'
                     break;
                 case "엘사":
-                    resultMessege = "겨울왕국 엘사"
+                    resultTitle = '당신은 겨울왕국의 "엘사" 이군요!'
                     break;
                 case "신데렐라":
-                    resultMessege = "신데렐라"
+                    resultTitle = '당신은 "신데렐라" 군요!'
                     break;
                 case "미녀와야수 벨":
-                    resultMessege = "공주 벨"
+                    resultTitle = '당신은 공주 "벨" 이군요!'
                     break;
                 case "라푼젤":
-                    resultMessege = "라푼젤"
+                    resultTitle = '당신은 "라푼젤" 이군요!'
                     break;
                 case "인어공주":
-                    resultMessege = "인어공주"
+                    resultTitle = '당신은 "인어공주" 군요!'
                     break;
                 case "쟈스민":
-                    resultMessege = "공주 쟈스민"
+                    resultTitle = '당신은 알리딘의 "쟈스민" 이군요!'
                     break;
             }
+            let celebrate = "<div class=result-message> 축하합니다!! </div>"
+            $('.result-message').html(celebrate + resultTitle);
+
+            var barWidth;
+            for (let i = 0; i < maxPredictions; i++) {
+                if (prediction[i].probability.toFixed(2) > 0.1) {
+                    barWidth = Math.round(prediction[i].probability.toFixed(2) * 100) + "%";
+                } else if (prediction[i].probability.toFixed(2) >= 0.01) {
+                    barWidth = "4%"
+                } else {
+                    barWidth = "2%"
+                }
+            let resultMessege;
+            switch (prediction[i].className) {
+                case "피오나공주":
+                    resultMessege = '피오나'
+                    break;
+                case "백설공주":
+                    resultMessege = '백설공주'
+                    break;
+                case "엘사":
+                    resultMessege = '엘사'
+                    break;
+                case "신데렐라":
+                    resultMessege = '신데렐라'
+                    break;
+                case "미녀와야수 벨":
+                    resultMessege = '미녀와 야수 벨'
+                    break;
+                case "라푼젤":
+                    resultMessege = '라푼젤'
+                    break;
+                case "인어공주":
+                    resultMessege = '인어공주'
+                    break;
+                case "쟈스민":
+                    resultMessege = '쟈스민'
+                    break;
+            }
+            var label = "<div class='animal-label d-flex align-items-center'>" + resultMessege + "</div>"
+            var bar = "<div class='bar-container position-relative container'><div class='" + prediction[i].className + "-box'></div><div class='d-flex justify-content-center align-items-center " + prediction[i].className + "-bar' style='width: " + barWidth + "'><span class='d-block percent-text'>" + Math.round(prediction[i].probability.toFixed(2) * 100) + "%</span></div></div>"
+            labelContainer.childNodes[i].innerHTML = label + bar;
+        }
+            /*
             $('.result-message').html(resultMessege);
             for (let i = 0; i < maxPredictions; i++) {
                 const classPrediction =
                     prediction[i].className + ": " + prediction[i].probability.toFixed(2);
                 labelContainer.childNodes[i].innerHTML = classPrediction;
-            }
+            }*/
         }
     </script>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript">
 
-        function gaReload1(){
-            gtag('event')
-        }
         function readURL(input) {
             if (input.files && input.files[0]) {
                 var reader = new FileReader();
@@ -201,7 +243,7 @@
             }
         }
 
-        function removeUpload() {
+        function gaReload1() {
             $('.file-upload-input').replaceWith($('.file-upload-input').clone());
             $('.file-upload-content').hide();
             $('.image-upload-wrap').show();
