--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
             <div id="label-container" class="d-flex flex-column justify-content-around text-center"></div>
 
             <div class="pt-3 image-title-wrap">
-                <button type="button p-2" class="try-again-btn" onclick="gaReload1();" data-toggle="modal"
-                    data-target="#adModal">
+                <button type="button p-2" class="try-again-btn" onclick="gaReload1();">
                     <span class="try-again-text">다른 사진 가져오기</span>
                 </button>
             </div>
@@ -229,6 +228,7 @@
                 var reader = new FileReader();
                 reader.onload = function (e) {
                     $('.image-upload-wrap').hide();
+                    $('#loading').show();
                     $('.file-upload-image').attr('src', e.target.result);
                     $('.file-upload-content').show();
                     $('.image-title').html(input.files[0].name);
@@ -236,10 +236,11 @@
                 reader.readAsDataURL(input.files[0]);
                 init().then(() => {
                     predict();
+                    $('#loading').hide();
                 });
 
             } else {
-                removeUpload();
+                gaReload1();
             }
         }
 
