--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="spinner-border" role="status">
                     <span class="sr-only">Loading...</span>
                 </div>
-                <p class="text-center">인공지능이 당신의 사진을 분석중입니다.</p>
+                <p class="text-center2">인공지능이 당신의 사진을 분석중입니다.</p>
             </div>
             <p class="result-message"></p>
             <div id="label-container" class="d-flex flex-column justify-content-around text-center"></div>
