--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <p class="text-center2">인공지능이 당신의 사진을 분석중입니다.</p>
             </div>
             <p class="result-message"></p>
-            <div id="label-container" class="d-flex flex-column justify-content-around text-center"></div>
+            <div id="label-container" class="justify-content-around text-center"></div>
 
             <div class="pt-3 image-title-wrap">
                 <button type="button p-2" class="try-again-btn" onclick="gaReload1();">
@@ -84,6 +84,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
@@ -127,13 +128,46 @@
                 labelContainer.appendChild(document.createElement("div"));
             }
         }
-        /*
-                sync function loop() {
-                    webcam.update(); // update the webcam frame
-                    await predict();
-                    window.requestAnimationFrame(loop);
-                }
-        */
+
+
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $('.image-upload-wrap').hide();
+                    $('.result-message').hide();
+                    $('#label-container').hide();
+                    $('#loading').show();
+                    $('.file-upload-image').attr('src', e.target.result);
+                    $('.file-upload-content').show();
+                    $('.image-title').html(input.files[0].name);
+                };
+                reader.readAsDataURL(input.files[0]);
+                init().then(() => {
+                    predict();
+                    $('#label-container').show();
+                    $('#loading').hide();
+                    $('.result-message').show();
+                    
+                });
+
+            } else {
+                gaReload1();
+            }
+        }
+
+        function gaReload1() {
+            $('.file-upload-input').replaceWith($('.file-upload-input').clone());
+            $('.file-upload-content').hide();
+            $('.image-upload-wrap').show();
+            
+        }
+        $('.image-upload-wrap').bind('dragover', function () {
+            $('.image-upload-wrap').addClass('image-dropping');
+        });
+        $('.image-upload-wrap').bind('dragleave', function () {
+            $('.image-upload-wrap').removeClass('image-dropping');
+        });
 
         // run the webcam image through the image model
         async function predict() {
@@ -180,37 +214,37 @@
                 } else {
                     barWidth = "2%"
                 }
-            let resultMessege;
-            switch (prediction[i].className) {
-                case "fiona":
-                    resultMessege = '피오나'
-                    break;
-                case "snowwhite":
-                    resultMessege = '백설공주'
-                    break;
-                case "elsa":
-                    resultMessege = '엘사'
-                    break;
-                case "cinderella":
-                    resultMessege = '신데렐라'
-                    break;
-                case "bell":
-                    resultMessege = '미녀와 야수 벨'
-                    break;
-                case "tangled":
-                    resultMessege = '라푼젤'
-                    break;
-                case "water":
-                    resultMessege = '인어공주'
-                    break;
-                case "jasmine":
-                    resultMessege = '쟈스민'
-                    break;
+                let resultMessege;
+                switch (prediction[i].className) {
+                    case "fiona":
+                        resultMessege = '피오나'
+                        break;
+                    case "snowwhite":
+                        resultMessege = '백설공주'
+                        break;
+                    case "elsa":
+                        resultMessege = '엘사'
+                        break;
+                    case "cinderella":
+                        resultMessege = '신데렐라'
+                        break;
+                    case "bell":
+                        resultMessege = '미녀와 야수 벨'
+                        break;
+                    case "tangled":
+                        resultMessege = '라푼젤'
+                        break;
+                    case "water":
+                        resultMessege = '인어공주'
+                        break;
+                    case "jasmine":
+                        resultMessege = '쟈스민'
+                        break;
+                }
+                var label = "<div class='animal-label d-flex align-items-center'>" + resultMessege + "</div>"
+                var bar = "<div class='bar-container position-relative container'><div class='" + prediction[i].className + "-box'></div><div class='d-flex justify-content-center align-items-center " + prediction[i].className + "-bar' style='width: " + barWidth + "'><span class='d-block percent-text'>" + Math.round(prediction[i].probability.toFixed(2) * 100) + "%</span></div></div>"
+                labelContainer.childNodes[i].innerHTML = label + bar;
             }
-            var label = "<div class='animal-label d-flex align-items-center'>" + resultMessege + "</div>"
-            var bar = "<div class='bar-container position-relative container'><div class='" + prediction[i].className + "-box'></div><div class='d-flex justify-content-center align-items-center " + prediction[i].className + "-bar' style='width: " + barWidth + "'><span class='d-block percent-text'>" + Math.round(prediction[i].probability.toFixed(2) * 100) + "%</span></div></div>"
-            labelContainer.childNodes[i].innerHTML = label + bar;
-        }
             /*
             $('.result-message').html(resultMessege);
             for (let i = 0; i < maxPredictions; i++) {
@@ -221,44 +255,7 @@
         }
     </script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript">
-
-        function readURL(input) {
-            if (input.files && input.files[0]) {
-                var reader = new FileReader();
-                reader.onload = function (e) {
-                    $('.image-upload-wrap').hide();
-                    $('#loading').show();
-                    $('.file-upload-image').attr('src', e.target.result);
-                    $('.file-upload-content').show();
-                    $('.image-title').html(input.files[0].name);
-                };
-                reader.readAsDataURL(input.files[0]);
-                init().then(() => {
-                    predict();
-                    $('#loading').hide();
-                });
-
-            } else {
-                gaReload1();
-            }
-        }
-
-        function gaReload1() {
-            $('.file-upload-input').replaceWith($('.file-upload-input').clone());
-            $('.file-upload-content').hide();
-            $('.image-upload-wrap').show();
-        }
-        $('.image-upload-wrap').bind('dragover', function () {
-            $('.image-upload-wrap').addClass('image-dropping');
-        });
-        $('.image-upload-wrap').bind('dragleave', function () {
-            $('.image-upload-wrap').removeClass('image-dropping');
-        });
-
-    </script>
-
+ 
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript"
         src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6291ce2e0d696997"></script>
