--- a/index.html
+++ b/index.html
@@ -28,19 +28,31 @@
         </div>
     </nav>
     -->
-    <div class="fiona-images-div">
+    <div class="fiona-images-div" onclick="window.location.reload()">
         <img src="./project_image/fiona_3.png" class="mr-5 fiona-images">
         <img src="./project_image/fiona_1.png" class="mr-5 fiona-images" style="width: 9%;">
         <img src="./project_image/fiona_2.png" class="fiona-images" style="width: 15%">
     </div>
     <section class="section">
-        <h1 class="title">피오나 판별 테스트</h1>
+        <h1 class="title" onclick="window.location.reload()">피오나 판별 테스트</h1>
         <h2 class="subtitle">인공지능은 당신을 피오나공주로 볼까?</h2>
     </section>
 
 
 
     <div class="container file-upload">
+        <div class="description" font-weight="500">
+            <div class="desc_text">
+                이 테스트는 인공지능이 본인의 얼굴과<br> 디즈니 공주들의 얼굴을 비교하여<br>
+                가장 비슷한 닮음꼴을 찾아주는 테스트입니다.
+            </div>
+            <button class="mt-3 mb-3 start-test-button" onclick="image_upload();">
+                <span class="start-test">테스트 시작하기!</span>
+            </button>
+            <div class="ps">
+                <span>p.s 수집된 얼굴들은 절대로 따로 저장되거나 업로드되지 않습니다.</span>
+            </div>
+        </div>
         <div class="image-upload-wrap">
             <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
             <div class="drag-text">
@@ -62,7 +74,7 @@
 
             <div class="pt-3 image-title-wrap">
                 <button type="button p-2" class="try-again-btn" onclick="gaReload1();">
-                    <span class="try-again-text">다른 사진 가져오기</span>
+                    <span class="try-again-text" color="red">다른 사진 가져오기</span>
                 </button>
             </div>
         </div>
@@ -80,7 +92,7 @@
 
     <div id="webcam-container"></div>
 
-
+ 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -148,19 +160,22 @@
                     $('#label-container').show();
                     $('#loading').hide();
                     $('.result-message').show();
-                    
+
                 });
 
             } else {
                 gaReload1();
             }
         }
-
+        function image_upload(){
+            $('.description').hide();
+            $('.image-upload-wrap').fadeIn(1500);
+        }
         function gaReload1() {
             $('.file-upload-input').replaceWith($('.file-upload-input').clone());
             $('.file-upload-content').hide();
             $('.image-upload-wrap').show();
-            
+
         }
         $('.image-upload-wrap').bind('dragover', function () {
             $('.image-upload-wrap').addClass('image-dropping');
@@ -255,7 +270,7 @@
         }
     </script>
 
- 
+
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript"
         src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6291ce2e0d696997"></script>
