--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <meta name="naver-site-verification" content="e8fcbd58953e076b150fbcabd27741df7e740714" />
 </head>
 
 <body>
