--- a/index.html
+++ b/index.html
@@ -11,12 +11,23 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>피오나공주 테스트</title>
+    <title>피오나 테스트</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <meta name="naver-site-verification" content="e8fcbd58953e076b150fbcabd27741df7e740714" />
+    <meta name="description" content="인공지능을 활용해 당신의 얼굴이 디즈니 공주 중 누구와 닮았는지 판별해주는 사이트입니다. ">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="피오나 테스트">
+    <meta property="og:description" content="인공지능을 활용해 당신의 얼굴이 디즈니 공주 중 누구와 닮았는지 판별해주는 사이트입니다.">
+    <meta property="og:image" content="./project_image/fiona-face.png/">
+    <meta property="og:url" content="http://www.mysite.com">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="피오나 테스트">
+    <meta name="twitter:description" content="인공지능을 활용해 당신의 얼굴이 디즈니 공주 중 누구와 닮았는지 판별해주는 사이트입니다.">
+    <meta name="twitter:image" content="./project_image/fiona-face.png/">
+    <meta name="twitter:domain" content="https://www.ai-fionatest.shop">
 </head>
 
 <body>
@@ -93,7 +104,7 @@
 
     <div id="webcam-container"></div>
 
- 
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -168,7 +179,7 @@
                 gaReload1();
             }
         }
-        function image_upload(){
+        function image_upload() {
             $('.description').hide();
             $('.image-upload-wrap').fadeIn(1500);
         }
