--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
                 가장 비슷한 닮음꼴을 찾아주는 테스트입니다.
             </div>
             <button class="mt-3 mb-3 start-test-button" onclick="image_upload();">
-                <span class="start-test">테스트 시작하기!</span>
+                <span class="start-test">테스트 시작하기</span>
             </button>
             <div class="ps">
-                <span>p.s 수집된 얼굴들은 절대로 따로 저장되거나 업로드되지 않습니다.</span>
+                <span>p.s 수집된 얼굴들은 절대로 따로 저장되거나 업로드되지 않습니다.</span><br>
+                <span>얼굴만 나온 사진을 업로드해야 정확도가 높아집니다!</span>
             </div>
         </div>
         <div class="image-upload-wrap">
