--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <meta name="twitter:description" content="인공지능을 활용해 당신의 얼굴이 디즈니 공주 중 누구와 닮았는지 판별해주는 사이트입니다.">
     <meta name="twitter:image" content="./project_image/fiona-face.png/">
     <meta name="twitter:domain" content="https://www.ai-fionatest.shop">
+    <meta name="google-site-verification" content="F3Y8dfVduFaVEVLV94P6Emci1u4hqUN25cxTJ7DWXxc" />
 </head>
 
 <body>
