--- a/index.html
+++ b/index.html
@@ -104,11 +104,17 @@
         <div class="addthis_inline_share_toolbox_nuik"></div>
     </div>
 
-
-    <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-hxnTAAFuzgZ67JMY" data-ad-width="320"
-        data-ad-height="100"></ins>
-    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-
+    <div class="mt1 ad-banner">
+        <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-hxnTAAFuzgZ67JMY" data-ad-width="320"
+            data-ad-height="100"></ins>
+        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+        <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-gL23bEDyKYbYA6zh" data-ad-width="300"
+            data-ad-height="250"></ins>
+        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+        <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-72j0wjfnnLB2qgO7" data-ad-width="320"
+            data-ad-height="100"></ins>
+        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
