--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         </div>
     </nav>
     -->
+    <div class="mb-1 ad-banner">
+        <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-72j0wjfnnLB2qgO7" data-ad-width="320"
+            data-ad-height="100"></ins>
+        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+    </div>
     <div class="fiona-images-div" onclick="window.location.reload()">
         <img src="./project_image/fiona_3.png" class="mr-5 fiona-images">
         <img src="./project_image/fiona_1.png" class="mr-5 fiona-images" style="width: 9%;">
@@ -104,15 +109,12 @@
         <div class="addthis_inline_share_toolbox_nuik"></div>
     </div>
 
-    <div class="mt1 ad-banner">
+    <div class="mt-1 ad-banner">
         <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-hxnTAAFuzgZ67JMY" data-ad-width="320"
             data-ad-height="100"></ins>
         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-gL23bEDyKYbYA6zh" data-ad-width="300"
             data-ad-height="250"></ins>
-        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-        <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-72j0wjfnnLB2qgO7" data-ad-width="320"
-            data-ad-height="100"></ins>
         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     </div>
 
